--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.codecool</groupId>
-    <artifactId>intellij-maven-quickstart</artifactId>
+    <artifactId>joop-3tw-expert-system-movie</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -54,4 +54,4 @@
             </plugin>
         </plugins>
     </build>
-</project
+</project>
